@@ -7,6 +7,10 @@ Changelog
 - Include missing dependency on plone.app.locales.
   [hannosch]
 
+- Fixed the form_tabbing to use the correct buttons names. Closes
+  http://dev.plone.org/plone/ticket/7559
+  [lucie, calvinhp]
+
 3.2a1 - October 11, 2008
 ------------------------
 
